TPI parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALIANZA_EQUIPO_t
    ATRIBUTO_t
    BOOL_t
    DD_t
    DOMINIO_t
    EXTENSION_t
    FLOAT_t
    INTEGER_t
    LINK_t
    LISTA_EQUIPO_t
    MM_t
    NOMBRE_USUARIO_t
    PROTOCOLO_t
    PUERTO_t
    RUTA_t
    SEPARADOR_t
    TAREAS_t
    UNIVERSIDAD_REGIONAL_t
    URL_t
    USUARIO_t
    YYYY_t
    t_FECHA_FIN_t
    t_FECHA_INICIO_t

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> LLAVEIZQ ojson LLAVEDER
Rule 2     ojson -> equipos
Rule 3     ojson -> version
Rule 4     ojson -> firma
Rule 5     ojson -> equipos COMA version
Rule 6     ojson -> version COMA equipos
Rule 7     ojson -> equipos COMA firma
Rule 8     ojson -> firma COMA equipos
Rule 9     ojson -> version COMA firma
Rule 10    ojson -> firma COMA version
Rule 11    ojson -> equipos COMA version COMA firma
Rule 12    ojson -> version COMA firma COMA equipos
Rule 13    ojson -> firma COMA equipos COMA version
Rule 14    version -> VERSION_t DOS_PUNTOS STRING_t
Rule 15    firma -> FIRMA_DIGITAL_t DOS_PUNTOS STRING_t
Rule 16    equipos -> EQUIPOS_t DOS_PUNTOS CORCHIZQ lista_equipos CORCHDER
Rule 17    lista_equipos -> LLAVEIZQ equipo LLAVEDER
Rule 18    lista_equipos -> LLAVEIZQ equipo LLAVEDER COMA lista_equipos
Rule 19    equipo -> NOMBRE_EQUIPO_t COMA IDENTIDAD_EQUIPO_t COMA direccion COMA carrera_asignatura COMA integrantes COMA proyectos
Rule 20    equipo -> NOMBRE_EQUIPO_t COMA IDENTIDAD_EQUIPO_t COMA carrera_asignatura COMA integrantes COMA proyectos
Rule 21    direccion -> DIRECCION_t DOS_PUNTOS NULL_t
Rule 22    direccion -> DIRECCION_t DOS_PUNTOS LLAVEIZQ direccion_campos LLAVEDER
Rule 23    direccion_campos -> calle COMA ciudad COMA pais
Rule 24    direccion_campos -> ciudad COMA calle COMA pais
Rule 25    direccion_campos -> pais COMA ciudad COMA calle
Rule 26    calle -> CALLE_t
Rule 27    ciudad -> CIUDAD_t
Rule 28    pais -> PAIS_t
Rule 29    carrera_asignatura -> CARRERA_t COMA ASIGNATURA_t
Rule 30    integrantes -> INTEGRANTES_t DOS_PUNTOS CORCHIZQ lista_integrantes CORCHDER
Rule 31    lista_integrantes -> LLAVEIZQ integrante LLAVEDER
Rule 32    lista_integrantes -> LLAVEIZQ integrante LLAVEDER COMA lista_integrantes
Rule 33    integrante -> NOMBRE_t COMA EDAD_t COMA CARGO_t COMA FOTO_t COMA EMAIL_t COMA HABILIDADES_t COMA SALARIO_t COMA ACTIVO_t
Rule 34    proyectos -> PROYECTO_t DOS_PUNTOS CORCHIZQ lista_proyectos CORCHDER
Rule 35    lista_proyectos -> LLAVEIZQ proyecto LLAVEDER
Rule 36    lista_proyectos -> LLAVEIZQ proyecto LLAVEDER COMA lista_proyectos
Rule 37    proyecto -> NOMBRE_t COMA ESTADO_t COMA RESUMEN_t COMA tareas COMA FECHA_INICIO_t COMA FECHA_FIN_t COMA VIDEO_t COMA CONCLUSION_t
Rule 38    tareas -> ESTADO_t

Terminals, with rules where they appear

ACTIVO_t             : 33
ALIANZA_EQUIPO_t     : 
ASIGNATURA_t         : 29
ATRIBUTO_t           : 
BOOL_t               : 
CALLE_t              : 26
CARGO_t              : 33
CARRERA_t            : 29
CIUDAD_t             : 27
COMA                 : 5 6 7 8 9 10 11 11 12 12 13 13 18 19 19 19 19 19 20 20 20 20 23 23 24 24 25 25 29 32 33 33 33 33 33 33 33 36 37 37 37 37 37 37 37
CONCLUSION_t         : 37
CORCHDER             : 16 30 34
CORCHIZQ             : 16 30 34
DD_t                 : 
DIRECCION_t          : 21 22
DOMINIO_t            : 
DOS_PUNTOS           : 14 15 16 21 22 30 34
EDAD_t               : 33
EMAIL_t              : 33
EQUIPOS_t            : 16
ESTADO_t             : 37 38
EXTENSION_t          : 
FECHA_FIN_t          : 37
FECHA_INICIO_t       : 37
FIRMA_DIGITAL_t      : 15
FLOAT_t              : 
FOTO_t               : 33
HABILIDADES_t        : 33
IDENTIDAD_EQUIPO_t   : 19 20
INTEGER_t            : 
INTEGRANTES_t        : 30
LINK_t               : 
LISTA_EQUIPO_t       : 
LLAVEDER             : 1 17 18 22 31 32 35 36
LLAVEIZQ             : 1 17 18 22 31 32 35 36
MM_t                 : 
NOMBRE_EQUIPO_t      : 19 20
NOMBRE_USUARIO_t     : 
NOMBRE_t             : 33 37
NULL_t               : 21
PAIS_t               : 28
PROTOCOLO_t          : 
PROYECTO_t           : 34
PUERTO_t             : 
RESUMEN_t            : 37
RUTA_t               : 
SALARIO_t            : 33
SEPARADOR_t          : 
STRING_t             : 14 15
TAREAS_t             : 
UNIVERSIDAD_REGIONAL_t : 
URL_t                : 
USUARIO_t            : 
VERSION_t            : 14
VIDEO_t              : 37
YYYY_t               : 
error                : 
t_FECHA_FIN_t        : 
t_FECHA_INICIO_t     : 

Nonterminals, with rules where they appear

calle                : 23 24 25
carrera_asignatura   : 19 20
ciudad               : 23 24 25
direccion            : 19
direccion_campos     : 22
equipo               : 17 18
equipos              : 2 5 6 7 8 11 12 13
firma                : 4 7 8 9 10 11 12 13
inicio               : 0
integrante           : 31 32
integrantes          : 19 20
lista_equipos        : 16 18
lista_integrantes    : 30 32
lista_proyectos      : 34 36
ojson                : 1
pais                 : 23 24 25
proyecto             : 35 36
proyectos            : 19 20
tareas               : 37
version              : 3 5 6 9 10 11 12 13

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . LLAVEIZQ ojson LLAVEDER

    LLAVEIZQ        shift and go to state 2

    inicio                         shift and go to state 1

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> LLAVEIZQ . ojson LLAVEDER
    (2) ojson -> . equipos
    (3) ojson -> . version
    (4) ojson -> . firma
    (5) ojson -> . equipos COMA version
    (6) ojson -> . version COMA equipos
    (7) ojson -> . equipos COMA firma
    (8) ojson -> . firma COMA equipos
    (9) ojson -> . version COMA firma
    (10) ojson -> . firma COMA version
    (11) ojson -> . equipos COMA version COMA firma
    (12) ojson -> . version COMA firma COMA equipos
    (13) ojson -> . firma COMA equipos COMA version
    (16) equipos -> . EQUIPOS_t DOS_PUNTOS CORCHIZQ lista_equipos CORCHDER
    (14) version -> . VERSION_t DOS_PUNTOS STRING_t
    (15) firma -> . FIRMA_DIGITAL_t DOS_PUNTOS STRING_t

    EQUIPOS_t       shift and go to state 7
    VERSION_t       shift and go to state 8
    FIRMA_DIGITAL_t shift and go to state 9

    ojson                          shift and go to state 3
    equipos                        shift and go to state 4
    version                        shift and go to state 5
    firma                          shift and go to state 6

state 3

    (1) inicio -> LLAVEIZQ ojson . LLAVEDER

    LLAVEDER        shift and go to state 10


state 4

    (2) ojson -> equipos .
    (5) ojson -> equipos . COMA version
    (7) ojson -> equipos . COMA firma
    (11) ojson -> equipos . COMA version COMA firma

    LLAVEDER        reduce using rule 2 (ojson -> equipos .)
    COMA            shift and go to state 11


state 5

    (3) ojson -> version .
    (6) ojson -> version . COMA equipos
    (9) ojson -> version . COMA firma
    (12) ojson -> version . COMA firma COMA equipos

    LLAVEDER        reduce using rule 3 (ojson -> version .)
    COMA            shift and go to state 12


state 6

    (4) ojson -> firma .
    (8) ojson -> firma . COMA equipos
    (10) ojson -> firma . COMA version
    (13) ojson -> firma . COMA equipos COMA version

    LLAVEDER        reduce using rule 4 (ojson -> firma .)
    COMA            shift and go to state 13


state 7

    (16) equipos -> EQUIPOS_t . DOS_PUNTOS CORCHIZQ lista_equipos CORCHDER

    DOS_PUNTOS      shift and go to state 14


state 8

    (14) version -> VERSION_t . DOS_PUNTOS STRING_t

    DOS_PUNTOS      shift and go to state 15


state 9

    (15) firma -> FIRMA_DIGITAL_t . DOS_PUNTOS STRING_t

    DOS_PUNTOS      shift and go to state 16


state 10

    (1) inicio -> LLAVEIZQ ojson LLAVEDER .

    $end            reduce using rule 1 (inicio -> LLAVEIZQ ojson LLAVEDER .)


state 11

    (5) ojson -> equipos COMA . version
    (7) ojson -> equipos COMA . firma
    (11) ojson -> equipos COMA . version COMA firma
    (14) version -> . VERSION_t DOS_PUNTOS STRING_t
    (15) firma -> . FIRMA_DIGITAL_t DOS_PUNTOS STRING_t

    VERSION_t       shift and go to state 8
    FIRMA_DIGITAL_t shift and go to state 9

    version                        shift and go to state 17
    firma                          shift and go to state 18

state 12

    (6) ojson -> version COMA . equipos
    (9) ojson -> version COMA . firma
    (12) ojson -> version COMA . firma COMA equipos
    (16) equipos -> . EQUIPOS_t DOS_PUNTOS CORCHIZQ lista_equipos CORCHDER
    (15) firma -> . FIRMA_DIGITAL_t DOS_PUNTOS STRING_t

    EQUIPOS_t       shift and go to state 7
    FIRMA_DIGITAL_t shift and go to state 9

    equipos                        shift and go to state 19
    firma                          shift and go to state 20

state 13

    (8) ojson -> firma COMA . equipos
    (10) ojson -> firma COMA . version
    (13) ojson -> firma COMA . equipos COMA version
    (16) equipos -> . EQUIPOS_t DOS_PUNTOS CORCHIZQ lista_equipos CORCHDER
    (14) version -> . VERSION_t DOS_PUNTOS STRING_t

    EQUIPOS_t       shift and go to state 7
    VERSION_t       shift and go to state 8

    equipos                        shift and go to state 21
    version                        shift and go to state 22

state 14

    (16) equipos -> EQUIPOS_t DOS_PUNTOS . CORCHIZQ lista_equipos CORCHDER

    CORCHIZQ        shift and go to state 23


state 15

    (14) version -> VERSION_t DOS_PUNTOS . STRING_t

    STRING_t        shift and go to state 24


state 16

    (15) firma -> FIRMA_DIGITAL_t DOS_PUNTOS . STRING_t

    STRING_t        shift and go to state 25


state 17

    (5) ojson -> equipos COMA version .
    (11) ojson -> equipos COMA version . COMA firma

    LLAVEDER        reduce using rule 5 (ojson -> equipos COMA version .)
    COMA            shift and go to state 26


state 18

    (7) ojson -> equipos COMA firma .

    LLAVEDER        reduce using rule 7 (ojson -> equipos COMA firma .)


state 19

    (6) ojson -> version COMA equipos .

    LLAVEDER        reduce using rule 6 (ojson -> version COMA equipos .)


state 20

    (9) ojson -> version COMA firma .
    (12) ojson -> version COMA firma . COMA equipos

    LLAVEDER        reduce using rule 9 (ojson -> version COMA firma .)
    COMA            shift and go to state 27


state 21

    (8) ojson -> firma COMA equipos .
    (13) ojson -> firma COMA equipos . COMA version

    LLAVEDER        reduce using rule 8 (ojson -> firma COMA equipos .)
    COMA            shift and go to state 28


state 22

    (10) ojson -> firma COMA version .

    LLAVEDER        reduce using rule 10 (ojson -> firma COMA version .)


state 23

    (16) equipos -> EQUIPOS_t DOS_PUNTOS CORCHIZQ . lista_equipos CORCHDER
    (17) lista_equipos -> . LLAVEIZQ equipo LLAVEDER
    (18) lista_equipos -> . LLAVEIZQ equipo LLAVEDER COMA lista_equipos

    LLAVEIZQ        shift and go to state 30

    lista_equipos                  shift and go to state 29

state 24

    (14) version -> VERSION_t DOS_PUNTOS STRING_t .

    COMA            reduce using rule 14 (version -> VERSION_t DOS_PUNTOS STRING_t .)
    LLAVEDER        reduce using rule 14 (version -> VERSION_t DOS_PUNTOS STRING_t .)


state 25

    (15) firma -> FIRMA_DIGITAL_t DOS_PUNTOS STRING_t .

    COMA            reduce using rule 15 (firma -> FIRMA_DIGITAL_t DOS_PUNTOS STRING_t .)
    LLAVEDER        reduce using rule 15 (firma -> FIRMA_DIGITAL_t DOS_PUNTOS STRING_t .)


state 26

    (11) ojson -> equipos COMA version COMA . firma
    (15) firma -> . FIRMA_DIGITAL_t DOS_PUNTOS STRING_t

    FIRMA_DIGITAL_t shift and go to state 9

    firma                          shift and go to state 31

state 27

    (12) ojson -> version COMA firma COMA . equipos
    (16) equipos -> . EQUIPOS_t DOS_PUNTOS CORCHIZQ lista_equipos CORCHDER

    EQUIPOS_t       shift and go to state 7

    equipos                        shift and go to state 32

state 28

    (13) ojson -> firma COMA equipos COMA . version
    (14) version -> . VERSION_t DOS_PUNTOS STRING_t

    VERSION_t       shift and go to state 8

    version                        shift and go to state 33

state 29

    (16) equipos -> EQUIPOS_t DOS_PUNTOS CORCHIZQ lista_equipos . CORCHDER

    CORCHDER        shift and go to state 34


state 30

    (17) lista_equipos -> LLAVEIZQ . equipo LLAVEDER
    (18) lista_equipos -> LLAVEIZQ . equipo LLAVEDER COMA lista_equipos
    (19) equipo -> . NOMBRE_EQUIPO_t COMA IDENTIDAD_EQUIPO_t COMA direccion COMA carrera_asignatura COMA integrantes COMA proyectos
    (20) equipo -> . NOMBRE_EQUIPO_t COMA IDENTIDAD_EQUIPO_t COMA carrera_asignatura COMA integrantes COMA proyectos

    NOMBRE_EQUIPO_t shift and go to state 36

    equipo                         shift and go to state 35

state 31

    (11) ojson -> equipos COMA version COMA firma .

    LLAVEDER        reduce using rule 11 (ojson -> equipos COMA version COMA firma .)


state 32

    (12) ojson -> version COMA firma COMA equipos .

    LLAVEDER        reduce using rule 12 (ojson -> version COMA firma COMA equipos .)


state 33

    (13) ojson -> firma COMA equipos COMA version .

    LLAVEDER        reduce using rule 13 (ojson -> firma COMA equipos COMA version .)


state 34

    (16) equipos -> EQUIPOS_t DOS_PUNTOS CORCHIZQ lista_equipos CORCHDER .

    COMA            reduce using rule 16 (equipos -> EQUIPOS_t DOS_PUNTOS CORCHIZQ lista_equipos CORCHDER .)
    LLAVEDER        reduce using rule 16 (equipos -> EQUIPOS_t DOS_PUNTOS CORCHIZQ lista_equipos CORCHDER .)


state 35

    (17) lista_equipos -> LLAVEIZQ equipo . LLAVEDER
    (18) lista_equipos -> LLAVEIZQ equipo . LLAVEDER COMA lista_equipos

    LLAVEDER        shift and go to state 37


state 36

    (19) equipo -> NOMBRE_EQUIPO_t . COMA IDENTIDAD_EQUIPO_t COMA direccion COMA carrera_asignatura COMA integrantes COMA proyectos
    (20) equipo -> NOMBRE_EQUIPO_t . COMA IDENTIDAD_EQUIPO_t COMA carrera_asignatura COMA integrantes COMA proyectos

    COMA            shift and go to state 38


state 37

    (17) lista_equipos -> LLAVEIZQ equipo LLAVEDER .
    (18) lista_equipos -> LLAVEIZQ equipo LLAVEDER . COMA lista_equipos

    CORCHDER        reduce using rule 17 (lista_equipos -> LLAVEIZQ equipo LLAVEDER .)
    COMA            shift and go to state 39


state 38

    (19) equipo -> NOMBRE_EQUIPO_t COMA . IDENTIDAD_EQUIPO_t COMA direccion COMA carrera_asignatura COMA integrantes COMA proyectos
    (20) equipo -> NOMBRE_EQUIPO_t COMA . IDENTIDAD_EQUIPO_t COMA carrera_asignatura COMA integrantes COMA proyectos

    IDENTIDAD_EQUIPO_t shift and go to state 40


state 39

    (18) lista_equipos -> LLAVEIZQ equipo LLAVEDER COMA . lista_equipos
    (17) lista_equipos -> . LLAVEIZQ equipo LLAVEDER
    (18) lista_equipos -> . LLAVEIZQ equipo LLAVEDER COMA lista_equipos

    LLAVEIZQ        shift and go to state 30

    lista_equipos                  shift and go to state 41

state 40

    (19) equipo -> NOMBRE_EQUIPO_t COMA IDENTIDAD_EQUIPO_t . COMA direccion COMA carrera_asignatura COMA integrantes COMA proyectos
    (20) equipo -> NOMBRE_EQUIPO_t COMA IDENTIDAD_EQUIPO_t . COMA carrera_asignatura COMA integrantes COMA proyectos

    COMA            shift and go to state 42


state 41

    (18) lista_equipos -> LLAVEIZQ equipo LLAVEDER COMA lista_equipos .

    CORCHDER        reduce using rule 18 (lista_equipos -> LLAVEIZQ equipo LLAVEDER COMA lista_equipos .)


state 42

    (19) equipo -> NOMBRE_EQUIPO_t COMA IDENTIDAD_EQUIPO_t COMA . direccion COMA carrera_asignatura COMA integrantes COMA proyectos
    (20) equipo -> NOMBRE_EQUIPO_t COMA IDENTIDAD_EQUIPO_t COMA . carrera_asignatura COMA integrantes COMA proyectos
    (21) direccion -> . DIRECCION_t DOS_PUNTOS NULL_t
    (22) direccion -> . DIRECCION_t DOS_PUNTOS LLAVEIZQ direccion_campos LLAVEDER
    (29) carrera_asignatura -> . CARRERA_t COMA ASIGNATURA_t

    DIRECCION_t     shift and go to state 45
    CARRERA_t       shift and go to state 46

    direccion                      shift and go to state 43
    carrera_asignatura             shift and go to state 44

state 43

    (19) equipo -> NOMBRE_EQUIPO_t COMA IDENTIDAD_EQUIPO_t COMA direccion . COMA carrera_asignatura COMA integrantes COMA proyectos

    COMA            shift and go to state 47


state 44

    (20) equipo -> NOMBRE_EQUIPO_t COMA IDENTIDAD_EQUIPO_t COMA carrera_asignatura . COMA integrantes COMA proyectos

    COMA            shift and go to state 48


state 45

    (21) direccion -> DIRECCION_t . DOS_PUNTOS NULL_t
    (22) direccion -> DIRECCION_t . DOS_PUNTOS LLAVEIZQ direccion_campos LLAVEDER

    DOS_PUNTOS      shift and go to state 49


state 46

    (29) carrera_asignatura -> CARRERA_t . COMA ASIGNATURA_t

    COMA            shift and go to state 50


state 47

    (19) equipo -> NOMBRE_EQUIPO_t COMA IDENTIDAD_EQUIPO_t COMA direccion COMA . carrera_asignatura COMA integrantes COMA proyectos
    (29) carrera_asignatura -> . CARRERA_t COMA ASIGNATURA_t

    CARRERA_t       shift and go to state 46

    carrera_asignatura             shift and go to state 51

state 48

    (20) equipo -> NOMBRE_EQUIPO_t COMA IDENTIDAD_EQUIPO_t COMA carrera_asignatura COMA . integrantes COMA proyectos
    (30) integrantes -> . INTEGRANTES_t DOS_PUNTOS CORCHIZQ lista_integrantes CORCHDER

    INTEGRANTES_t   shift and go to state 53

    integrantes                    shift and go to state 52

state 49

    (21) direccion -> DIRECCION_t DOS_PUNTOS . NULL_t
    (22) direccion -> DIRECCION_t DOS_PUNTOS . LLAVEIZQ direccion_campos LLAVEDER

    NULL_t          shift and go to state 54
    LLAVEIZQ        shift and go to state 55


state 50

    (29) carrera_asignatura -> CARRERA_t COMA . ASIGNATURA_t

    ASIGNATURA_t    shift and go to state 56


state 51

    (19) equipo -> NOMBRE_EQUIPO_t COMA IDENTIDAD_EQUIPO_t COMA direccion COMA carrera_asignatura . COMA integrantes COMA proyectos

    COMA            shift and go to state 57


state 52

    (20) equipo -> NOMBRE_EQUIPO_t COMA IDENTIDAD_EQUIPO_t COMA carrera_asignatura COMA integrantes . COMA proyectos

